output/dev/if-func4.err
output prefix: llvm/dev/if-func4
llvmas: /usr/lib/llvm-3.8/bin/llvm-as
llc: /usr/lib/llvm-3.8/bin/llc
cc: gcc
codegen: /home/rafay/Desktop/decafCompiler/answer/decafcomp
stdlib: /home/rafay/Desktop/decafCompiler/answer/decaf-stdlib.c
generating llvm code:/home/rafay/Desktop/decafCompiler/answer/decafcomp ... ok
; ModuleID = 'C'

define i1 @f() {
entry:
  ret i1 true
}

define void @main() {
entry:
  ret i32 0
}
assembling to bitcode:/usr/lib/llvm-3.8/bin/llvm-as "llvm/dev/if-func4.llvm" -o "llvm/dev/if-func4.llvm.bc" ... failed (1)
/usr/lib/llvm-3.8/bin/llvm-as: llvm/dev/if-func4.llvm:10:7: error: value doesn't match function result type 'void'
  ret i32 0
      ^
converting to native code:/usr/lib/llvm-3.8/bin/llc "llvm/dev/if-func4.llvm.bc" -o "llvm/dev/if-func4.llvm.s" ... ok
linking:gcc -o "llvm/dev/if-func4.llvm.exec" "llvm/dev/if-func4.llvm.s" "/home/rafay/Desktop/decafCompiler/answer/decaf-stdlib.c" ... ok
running:llvm/dev/if-func4.llvm.exec ... failed (16)
